0.6.1/_sources/generated/statsmodels.genmod.generalized_estimating_equations.GEEResults.txt
statsmodels.genmod.generalized_estimating_equations.GEEResults
==============================================================

.. currentmodule:: statsmodels.genmod.generalized_estimating_equations

.. autoclass:: GEEResults

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~GEEResults.bse
    
    
      ~GEEResults.centered_resid
    
    
      ~GEEResults.conf_int
    
    
      ~GEEResults.cov_params
    
    
      ~GEEResults.f_test
    
    
      ~GEEResults.fittedvalues
    
    
      ~GEEResults.initialize
    
    
      ~GEEResults.llf
    
    
      ~GEEResults.load
    
    
      ~GEEResults.normalized_cov_params
    
    
      ~GEEResults.params_sensitivity
    
    
      ~GEEResults.plot_isotropic_dependence
    
    
      ~GEEResults.predict
    
    
      ~GEEResults.pvalues
    
    
      ~GEEResults.remove_data
    
    
      ~GEEResults.resid
    
    
      ~GEEResults.resid_centered
    
    
      ~GEEResults.resid_centered_split
    
    
      ~GEEResults.resid_split
    
    
      ~GEEResults.save
    
    
      ~GEEResults.sensitivity_params
    
    
      ~GEEResults.split_centered_resid
    
    
      ~GEEResults.split_resid
    
    
      ~GEEResults.standard_errors
    
    
      ~GEEResults.summary
    
    
      ~GEEResults.t_test
    
    
      ~GEEResults.tvalues
    
    
      ~GEEResults.wald_test
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~GEEResults.use_t
   
   